<resources>
    <string name="app_name">Encuestas</string>
    <string name="txtRegistro">Registro de Usuario</string>
    <string name="txtRealizar">Realizar Encuesta</string>
    <string name="txtRealizada">Mis Encuestas Realizadas</string>
    <string name="txtEliminar">Eliminar Encuesta</string>
    <string name="txtEditar">Editar Encuesta</string>
    <string name="hintNombreUsuario">Usuario</string>
    <string name="hintContrasena">Contraseña</string>
    <string name="btnOk">Ok</string>
    <string name="txtBienvenido">Bienvenido!!!</string>
    <string name="txtTituloRegistro">Registro</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintApellidoPaterno">Apellido Paterno</string>
    <string name="hintApellidoMaterno">Apellido Materno</string>
    <string name="hintTelefono">Teléfono</string>
    <string name="btnEnviar">Enviar</string>
    <string name="hintCorreo">Correo Electrónico</string>
    <string name="hintDireccion">Dirección</string>
    <string name="txtMasculino">Masculino</string>
    <string name="txtFemenino">Femenino</string>
    <string name="txtEncuesta">Encuesta</string>
    <string name="txtEsquema">¿En qué esquema has viajado?</string>
    <string name="txtEjecutiva">Ejecutiva</string>
    <string name="txtEconomica">Económica</string>
    <string name="txtPromo">Promo</string>
    <string name="txtServicio">¿Cómo calificaría nuestro servicio?</string>
    <string name="txtExcelente">Excelente</string>
    <string name="txtBueno">Bueno</string>
    <string name="txtMalo">Malo</string>
    <string name="hintMejoras">¿En qué podemos mejorar?</string>
    <string name="txtOfertasDescuentos">Quiero recibir ofertas y descuentos</string>
    <string name="txtEdit">Editar Encuesta</string>
    <string name="hintApellidoPaternoMaterno">Apellido Paterno y Materno</string>
    <string name="txtGenero">Genero</string>
    <string name="txtMisEncuestas">Mis Encuestas</string>
    <string name="txtDetalleEncuesta">Detalle Encuesta</string>
    <string name="hintGenero">Genero</string>
    <string name="hintNumero">N</string>
    <string name="hintViajado">Viajado</string>
    <string name="hintFrecuencia">Frecuencia</string>
    <string name="hintExperiencia">Experiencia</string>
    <string name="hintEsquema">Esquema</string>
    <string name="hintServicio">Servicio</string>
</resources>
