<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/figurabs"
    tools:context=".Util.EditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="72dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/txtEdit"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txvNombreEditar"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:background="@drawable/bordes"
                android:ems="8"
                android:hint="@string/hintNombre"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvEditar" />

            <TextView
                android:id="@+id/txvApellidoPaternoEditar"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:background="@drawable/bordes"
                android:ems="10"
                android:hint="@string/hintApellidoPaternoMaterno"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvNombreEditar" />



            <TextView
                android:id="@+id/txvCorreoEditar"
                android:layout_width="175dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="125dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/bordes"
                android:ems="10"
                android:hint="@string/hintCorreo"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintBottom_toTopOf="@+id/spnViajadoEditar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvApellidoPaternoEditar" />

            <TextView
                android:id="@+id/txvGeneroEditar"
                android:layout_width="105dp"
                android:layout_height="39dp"
                android:layout_gravity="center"
                android:layout_marginStart="188dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordes"
                android:hint="@string/txtGenero"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.525"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvApellidoPaternoEditar" />

            <Spinner
                android:id="@+id/spnViajadoEditar"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordes"
                android:entries="@array/Viajado"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvGeneroEditar" />

            <Spinner
                android:id="@+id/spnFrecuenciaEditar"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordes"
                android:entries="@array/Frecuencia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnViajadoEditar" />

            <Spinner
                android:id="@+id/spnExperienciaEditar"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/bordes"
                android:entries="@array/Experiencia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnFrecuenciaEditar" />

            <TextView
                android:id="@+id/txvPreguntaEsquemaEditar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:text="@string/txtEsquema"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spnExperienciaEditar" />


            <CheckBox
                android:id="@+id/ckbEjecutivaEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txtEjecutiva"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:buttonTint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvPreguntaEsquemaEditar"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/ckbEconomicaEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txtEconomica"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:buttonTint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.185"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvPreguntaEsquemaEditar"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/ckbPromoEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txtPromo"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:buttonTint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.744"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvPreguntaEsquemaEditar"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txvPreguntaServicioEditar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:text="@string/txtServicio"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ckbEconomicaEditar" />

            <RadioGroup
                android:id="@+id/rdgServicioEditar"
                android:layout_width="305dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvPreguntaServicioEditar">

                <RadioButton
                    android:id="@+id/rdbExcelenteEditar"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtExcelente"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:buttonTint="@color/colorWhite"/>

                <RadioButton
                    android:id="@+id/rdbBuenoEditar"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtBueno"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:buttonTint="@color/colorWhite"/>

                <RadioButton
                    android:id="@+id/rdbMaloEditar"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtMalo"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:buttonTint="@color/colorWhite"/>
            </RadioGroup>

            <EditText
                android:id="@+id/edtMejorasEditar"
                android:layout_width="300dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:background="@drawable/bordes"
                android:ems="10"
                android:hint="@string/hintMejoras"
                android:inputType="textPersonName"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rdgServicioEditar" />

            <Switch
                android:id="@+id/swtOfertasDescuentosEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/txtOfertasDescuentos"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtMejorasEditar" />

            <Button
                android:id="@+id/btnEnviarEditar"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:text="@string/btnEnviar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swtOfertasDescuentosEditar" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>